# file-copy-analysis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/mmap-cp/: main.c
src/rw-cp/: fileio.c  fileio.h  main.c
